--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Virtual Grandma</title>
   </head>
   <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
     
   </body>
 </html>
