--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Virtual Grandma</title>
+    <link rel="stylesheet" href="vg.css" type="text/css"> 
   </head>
   <body>
-    
+
   </body>
 </html>
