--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <main>
       <div id="welcome">
         <h1>Hi y/n! Grandma here.</h1>
-        <p>Explore the site to feel like you are back at grandma's house!</p>
+        <p>Welcome home, y/n. Want some cookies?</p>
       </div>
       <div class="item" id="daily-text">
         <div id="text">
