--- a/inspiration.html
+++ b/inspiration.html
@@ -17,10 +17,20 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Virtual Grandma</a>
+      <a href="home.html">Virtual Grandma</a>
     </header>
     <main>
-      <h1>Writing Prompt:</h1>
+      <h1 style="padding: 30px; margin-bottom: 30px">Get Creative!</h1>
+      <div class="prompt">
+        <h2>Generate a fun writing prompt!</h2>
+        <button class="button" onclick="window.open('https://www.servicescape.com/writing-prompt-generator')">Writing Prompt Generator</button>
+      </div>
+      <div class="prompt">
+        <h2>Find something new to draw!</h2>
+      </div>
+      <div class="prompt">
+        <h2>Feeling crafty? Choose a new project!</h2>
+      </div>
     </main>
   </body>
 </html>
