--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html">Virtual Grandma</a>
+      <a href="home.html">Virtual Grandma</a>
     </header>
     <main>
       <h1>Grandma's Recipes</h1>
