--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Virtual Grandma</title>
-    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css" type="text/css">
-    <link rel="stylesheet" href="vg.css" type="text/css">
-  </head>
-  <body>
-    <header></header>
-      <main>
-      <div id="welcome">
-        <h1>Hi y/n! Grandma here.</h1>
-        <p>Explore the site to feel like you are back at grandma's house!</p>
-      </div>
-      <div class="item" id="daily-text">
-        <div id="text">
-          This is your text from grandma.
-        </div>
-        <div class="text-p">
-          <h3 class="subheader">Texts from Grandma</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button class="button" id="newText">Get another text!</button>
-        </div>
-      </div>
-      <div class="item" id="recipes">
-        <div class="text-p">
-        <h3 class="subheader">Grandma's Recipes</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button class="button" onclick="window.location='recipes.html'">Recipes</button>
-        </div>
-      </div>
-      <div class="item" id="journal">
-        <div style="width:50%"></div>
-        <div class="text-p">
-          <h3 class="subheader">Inspiration from Grandma</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <button onclick="window.location='inspiration.html'"class="button">Get some inspiration!</button>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <p>Created by Madeleine Taft and Mary Pletcher. Jan 30, 2021.</p>
-    </footer>
-    <script src="vg.js" type="text/javascript"></script>
-  </body>
+<html>
+<head>
+<style>
+body {
+  background-color: white;
+}
+
+h1 {
+  color: black;
+  margin-left: 40px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<h1>What's Your Name?</h1>
+<h1>What Do You Want To Call Your Grandma?</h1>
+
+
+</body>
 </html>
