--- a/inspiration.html
+++ b/inspiration.html
@@ -32,5 +32,8 @@
         <h2>Feeling crafty? Choose a new project!</h2>
       </div>
     </main>
+    <footer>
+      <p>Created by Madeleine Taft and Mary Pletcher. Jan 30, 2021.</p>
+    </footer>
   </body>
 </html>
