--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,23 @@
       <a href="home.html">Virtual Grandma</a>
     </header>
     <main>
-      <h1>Grandma's Recipes</h1>
+      <h1 style="padding: 30px; margin-bottom: 30px">Grandma's Recipes</h1>
+      <div class="circles">
+        <button class="recipe-item" id="cookies">
+          <h3>Chocolate Chip Cookies</h3>
+        </button>
+        <button class="recipe-item" id="bread">
+          <h3>Loaf of Bread</h3>
+        </button>
+      </div>
+      <div class="circles">
+        <button class="recipe-item" id="spaghetti">
+          <h3>Spaghetti</h3>
+        </button>
+      </div>
     </main>
+    <footer>
+      <p>Created by Madeleine Taft and Mary Pletcher. Jan 30, 2021.</p>
+    </footer>
   </body>
 </html>
