--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
     <header></header>
       <main>
       <div id="welcome">
-        <h1>Hi y/n! Grandma here.</h1>
-        <p>Welcome home, y/n. Want some cookies?</p>
+        <h1>Hi <span class="yn">y/n</span>! Grandma here.</h1>
+        <p>Welcome home, <span class="yn">y/n</span>. Want some cookies?</p>
       </div>
       <div class="item" id="daily-text">
         <div id="text">
