--- a/index.html
+++ b/index.html
@@ -4,59 +4,71 @@
 <style>
 body {
   background-color: white;
+  text-align: center;
+
 }
 
 h1 {
   color: black;
-  margin-left: 40px;
   text-align: center;
+  font-size: 40pt;
+  padding-top: 30px;
+  font-family: sans-serif;
 }
 
 form {
   /* Center the form on the page */
-  margin: 0 auto;
-  width: 500px;
+  margin: 100px auto;
+  width: 60%;
   /* Form outline */
-  padding: 1em;
   /*border: 1px solid #CCC;
   border-radius: 1em;*/
+  font-family: sans-serif;
 }
 
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-align: left;
 }
 
 form li + li {
-  margin-top: 1em;
+  margin-top: 5em;
+
 }
 
 label {
   /* Uniform size & alignment */
   display: center;
-  width: 90px;
-  text-align: center;
+  font-size: 30pt;
+  font-weight: lighter;
 }
 
 input,
 textarea {
   /* To make sure that all text fields have the same font settings
      By default, textareas have a monospace font */
-  font: 1em sans-serif;
 
   /* Uniform text field size */
-  width: 300px;
+  width: 100%;
+  line-height: 75px;
   box-sizing: border-box;
+  font-family: sans-serif;
 
   /* Match form field borders */
-  border-bottom: 1px solid gray;
+  margin-top: 20px;
+  font-size: 20pt;
+  border-top:none;
+  border-left:none;
+  border-right:none;
 }
+
 
 input:focus,
 textarea:focus {
   /* Additional highlight for focused elements */
-  border-color: #000;
+  outline:none;
 }
 
 textarea {
@@ -75,8 +87,18 @@ textarea {
 button {
   /* This extra margin represent roughly the same space as the space
      between the labels and their text fields */
-  margin-left: .5em;
+     margin: 0px auto;
+     width: 200px;
+     height: 50px;
+     border-radius: 20px;
+     border: 2px solid black;
+     background:inherit;
+     font-size: 13pt;
 }
+button:hover{
+  background-color: #ffa785;
+}
+
 </style>
 </head>
 <body>
@@ -90,18 +112,21 @@ button {
     </li>
     <li>
       <label for="mail">What Do You Want To Call Your Grandma?</label> <br>
-      <input type="email" id="mail" name="user_email">
+      <input type="text" id="gma" name="gma_name">
     </li>
    </ul>
   </form>
+  <button id="form-button" onclick="doStuff();window.location='home.html'">meet grandma!</button>
+  <script src="vg.js" type="text/javascript"></script>
+  <script>
+  function doStuff(){
+    let nameInput = document.getElementById("name").value;
+    sessionStorage.setItem("name", nameInput);
 
+    let gmaInput = document.getElementById("gma").value;
+    sessionStorage.setItem("gma", gmaInput);
 
-
-
-
-
-
-
+  }
+  </script>
 </body>
 </html>
-
