--- a/recipes.html
+++ b/recipes.html
@@ -22,15 +22,15 @@
     <main>
       <h1 style="padding: 30px; margin-bottom: 30px">Grandma's Recipes</h1>
       <div class="circles">
-        <button class="recipe-item" id="cookies">
+        <button class="recipe-item" id="cookies" onclick = "window.open('https://tasty.co/recipe/chocolate-chip-cookies-granny-style', '_blank')">
           <h3>Chocolate Chip Cookies</h3>
         </button>
-        <button class="recipe-item" id="bread">
+        <button class="recipe-item" id="bread" onclick = "window.open('https://therecipecritic.com/homemade-bread/', '_blank')">
           <h3>Loaf of Bread</h3>
         </button>
       </div>
       <div class="circles">
-        <button class="recipe-item" id="spaghetti">
+        <button class="recipe-item" id="spaghetti" onclick = "window.open('https://arrisje.com/grandmas-spaghetti/', '_blank')">
           <h3>Spaghetti</h3>
         </button>
       </div>
