--- a/inspiration.html
+++ b/inspiration.html
@@ -27,9 +27,11 @@
       </div>
       <div class="prompt">
         <h2>Find something new to draw!</h2>
+        <button class="button" onclick="window.open('https://randomthingstodo.com/draw')">Doodle Prompt Generator</button>
       </div>
       <div class="prompt">
         <h2>Feeling crafty? Choose a new project!</h2>
+        <button class="button" onclick="window.open('https://www.happinessishomemade.net/quick-easy-kids-crafts-anyone-can-make/')">Craft Idea List</button>
       </div>
     </main>
     <footer>
