--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <a href="home.html">Virtual Grandma</a>
+      <a href="home.html"><img src = "grandmaicon.png" alt = "your grandma" style="height:100px;width:auto;"></a>
     </header>
     <main>
       <h1 style="padding: 30px; margin-bottom: 30px">Grandma's Recipes</h1>
