--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
           This is your text from grandma.
         </div>
         <div class="text-p">
-          <h3 class="subheader">Texts from G/N</h3>
+          <h3 class="subheader">Texts from <span class="gn">G/N</span></h3>
           <p>Don't forget to check your messages for inspiring, loving, and sometimes random texts from <span class="gn">G/N</span>!</p>
           <button class="button" id="newText">Get another text!</button>
         </div>
