--- a/home.html
+++ b/home.html
@@ -30,9 +30,11 @@
         <p>Even virtually, <span class="gn">G/N</span> wants to make sure you're eating well!</p>
         <button class="button" onclick="window.location='recipes.html'">Recipes</button>
         </div>
+        <img src="food.png" alt="food" style="height:300px;width:auto;object-fit:contain">
       </div>
       <div class="item" id="journal">
-        <div style="width:50%"></div>
+        <div style="width:50%"> <img src="craft.png" alt="food" style="height:275px;margin-left:100px;width:auto;object-fit:contain;">
+</div>
         <div class="text-p">
           <h3 class="subheader">Get Creative With <span class="gn">G/N</span></h3>
           <p>Take a break from the stress and get crafty!</p>
