--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <p>As always, <span class="gn">G/N</span> has some extra cash that she wants you to put into your savings account.</p>
         <button class="button" onclick="window.location='money.html'">Earn Money</button>
         </div>
-        <img src="food.png" alt="food" style="height:300px;width:auto;object-fit:contain">
+        <img src="money.png" alt="food" style="height:300px;width:auto;object-fit:contain">
       </div>
     </main>
     <footer>
