--- a/money.html
+++ b/money.html
@@ -22,16 +22,16 @@
     <main>
       <h1 style="padding: 30px; margin-bottom: 30px">Earn some money!</h1>
       <div class="prompt">
-        <h2>Generate a fun writing prompt!</h2>
-        <button class="button" onclick="window.open('https://www.servicescape.com/writing-prompt-generator')">Writing Prompt Generator</button>
+        <h2>Sign up for user testing to earn some quick money.</h2>
+        <button class="button" onclick="window.open('https://www.usertesting.com/')">User Testing</button>
       </div>
       <div class="prompt">
-        <h2>Find something new to draw!</h2>
-        <button class="button" onclick="window.open('https://randomthingstodo.com/draw')">Doodle Prompt Generator</button>
+        <h2>Put your craft skills to use and open an Etsy shop!</h2>
+        <button class="button" onclick="window.open('https://help.etsy.com/hc/en-us/articles/115014502448-Beginner-s-Guide-to-Selling-on-Etsy?segment=selling')">Sell on Etsy</button>
       </div>
       <div class="prompt">
-        <h2>Feeling crafty? Choose a new project!</h2>
-        <button class="button" onclick="window.open('https://www.happinessishomemade.net/quick-easy-kids-crafts-anyone-can-make/')">Craft Idea List</button>
+        <h2>Make money by teaching others! Become a virtual tutor. </h2>
+        <button class="button" onclick="window.open('https://www.tutor.com/apply')">Tutoring</button>
       </div>
     </main>
     <footer>
