--- a/home.html
+++ b/home.html
@@ -10,9 +10,10 @@
     <header></header>
       <main>
       <div id="welcome">
-        <h1>Hi <span class="yn">y/n</span>! <span class="gn">G/N</span> here.</h1>
+        <h1>Hi <span class="yn">y/n</span>! <span class="gn">G/N</span> here. </h1>
         <img src = "grandmaicon.png" alt = "your grandma">
-        <p>Welcome home, <span class="yn">y/n</span>. Want some cookies?</p>
+        <p>Welcome home, want some cookies?</p>
+
       </div>
       <div class="item" id="daily-text">
         <div id="text">
@@ -40,14 +41,6 @@
           <p>Take a break from the stress and get crafty!</p>
           <button onclick="window.location='inspiration.html'"class="button">Get some inspiration!</button>
         </div>
-      </div>
-      <div class="item" id="money">
-        <div class="text-p">
-        <h3 class="subheader">Money from <span class="gn">G/N</span></h3>
-        <p>As always, <span class="gn">G/N</span> has some extra cash that she wants you to put into your savings account.</p>
-        <button class="button" onclick="window.location='money.html'">Earn Money</button>
-        </div>
-        <img src="money.png" alt="food" style="height:300px;width:auto;object-fit:contain">
       </div>
     </main>
     <footer>
