--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header></header>
       <main>
       <div id="welcome">
-        <h1>Hi <span class="yn">y/n</span>! <span class="gn">G/N</span> here.</h1>
+        <h1 id='hello'>Hi <span class="yn">y/n</span>! <span class="gn">G/N</span> here.</h1>
         <img src = "grandmaicon.png" alt = "your grandma">
         <p>Welcome home, <span class="yn">y/n</span>. Want some cookies?</p>
       </div>
